<resources>
    <string name="app_name">Rap&amp;Tap</string>
    <string name="Pass">Password</string>
    <string name="Login">Login</string>
    <string name="User">Username</string>
    <string name="Logout">Logout</string>
    <string name="NewUser">New User</string>
    <string name="Signup">Sign Up</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="hello_blank_fragment" />
    <string name="Description">Description</string>
    <string name="SongName">Enter song name</string>
    <string name="Create">Create</string>
    <string name="Finish">Finish</string>
    <string name="SongNameDisplay">Song Name</string>
    <string name="ProfileBio">Bio</string>
    <string name="ProfileName">Handle</string>
    <string name="Settings">Settings</string>
    <string name="Submit">Submit</string>
    <string name="Back">Back</string>
</resources>